# VulnTranslate

./: .gitignore  .replit  AGENTIC_FLOW_EXPLANATION.md  AGENTIC_SYSTEM_ANALYSIS.md  COMPREHENSIVE_IMPROVEMENTS_LOG.md  LOCAL_SETUP.md  LOCAL_SETUP_GUIDE.md  MODULAR_ARCHITECTURE.md  README.md  app.py  create_test_docx.py  minimal_translator.py  modular_app.py  pyproject.toml  read.md  replit.md  requirements.txt  run_local.py  setup.bat  setup.py  setup.sh  simple_app.py  simple_upload_app.py  test_cve_document.html
attached_assets/: Pasted-Of-course-Here-is-a-clear-three-step-approach-to-fix-your-document-translation-workflow-by-integra-1754294472454_1754294472454.txt  input_1753790871253.docx  translated_input (1)_1753772288538.docx  translated_input (10)_1753791358534.docx  translated_input (17)_1754292033534.docx  translated_input (19)_1754292882954.docx  translated_input (24)_1754294855684.docx  translated_input (25)_1754295092347.docx  translated_input (26)_1754295287733.docx  translated_input (28)_1754297044968.docx  translated_input (31)_1754297730261.docx  translated_input (32)_1754297929943.docx  translated_input (33)_1754298328692.docx  translated_input (9)_1753790716243.docx
core/: exceptions.py  interfaces.py  models.py
orchestration/: __init__.py  translation_orchestrator.py
processors/: __init__.py  docx_processor.py
providers/: azure_translator.py  cve_term_preserver.py  openai_embeddings.py
services/: document_parser.py  document_processor.py  document_reconstructor.py  docx_translator.py  simple_translator.py  translator.py  validator.py
(+13 files in other folders)
