[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aspose-words>=25.7.0",
    "beautifulsoup4>=4.13.4",
    "numpy>=2.3.2",
    "openai>=1.97.1",
    "python-docx>=1.2.0",
    "requests>=2.32.4",
    "streamlit>=1.47.1",
]
