[tool.poetry]
name = "vulntranslate"
version = "0.1.0"
description = "CVE Translator with Aspose, Streamlit, OpenAI"
authors = ["Your Name <your@email.com>"]
readme = "read.md"
package-mode = false 

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
aspose-words = "^25.7.0"
beautifulsoup4 = "^4.13.4"
numpy = "^2.3.2"
openai = "^1.97.1"
python-docx = "^1.2.0"
requests = "^2.32.4"
streamlit = "^1.47.1"
python-dotenv = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
