[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cve-translation-system"
version = "1.0.0"
description = "Professional AI-powered CVE document translation system with Japanese template replacement"
requires-python = ">=3.11"
dependencies = [
    "aspose-words>=25.7.0",
    "beautifulsoup4>=4.13.4",
    "numpy>=2.3.2",
    "openai>=1.97.1",
    "python-docx>=1.2.0",
    "requests>=2.32.4",
    "streamlit>=1.47.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
